app/assets/styles/modules/_row.css
.row {
    @mixin clearfix;

    @mixin atMedium {
        .row__medium-4 {
            float: left;
            width: 33.33%;
        }

        .row__medium-4--larger {
            width: 37%;
        }

        .row__medium-6 {
            float: left;
            width: 50%;
        }

        .row__medium-8 {
            float: left;
            width: 66.66%;
        }

        .row__medium-8--smaller {
            width: 63%;
        }

        .row__b-margin-until-medium {
            margin-bottom: 0;
        }
    }

    @mixin atLarge {
        .row__large-4 {
            float: left;
            width: 33.33%;
        }

        .row__large-4--larger {
            width: 37%;
        }

        .row__large-6 {
            float: left;
            width: 50%;
        }

        .row__large-8 {
            float: left;
            width: 66.66%;
        }

        .row__large-8--smaller {
            width: 63%;
        }

        .row__b-margin-until-large {
            margin-bottom: 0;
        }
    }
}

.row--gutters {
    margin-right: -65px;
}

.row--gutters-large {
    margin-right: -100px;
}

.row--gutters-small {
    margin-right: -45px;
}

.row--gutters > div {
    padding-right: 65px;
}

.row--gutters-large > div {
    padding-right: 100px;
}

.row--gutters-small > div {
    padding-right: 45px;
}

.row__b-margin-until-medium {
    margin-bottom: 1rem;
}

.row--t-padding {
    padding-top: 80px;
}

/* Begin Equal Height Rules */
.row--equal-height-at-medium {
    @mixin atMedium {
        display: flex;
    }
}

.row--equal-height-at-medium > div {
    float: none;
    display: flex;
}

.row--equal-height-at-large {
@mixin atLarge {
    display: flex;
}
}

.row--equal-height-at-large > div {
    float: none;
    display: flex;
}

